# solamr_simulator

./: .gitignore  README.md
src/amr_description/: CMakeLists.txt  package.xml
src/amr_description/meshes/: A2_base.stl  A2_top_extr10mm_H.stl  only_shelf.stl  real_shelft.stl  test_for_gazebo.stl
src/amr_description/urdf/: .shelft_S.urdf.xacro.swp  .shelft_S_rod.urdf.xacro.swp  .shelft_XL_rod.urdf.xacro.swp  .solamr.gazebo.xacro.swp  .solamr.urdf.xacro.swp  2in1.gazebo.xacro  2in1.urdf.xacro  com_single_shelft.urdf  model.sdf  model.urdf  shelft_S.urdf.xacro  shelft_S_rod.urdf.xacro  shelft_XL.urdf.xacro  shelft_XL_rod.urdf.xacro  single_shelf.urdf.xacro  solamr.gazebo.xacro  solamr.urdf.xacro  solamr_rod.urdf.xacro  stl_test.urdf  turtleplate.urdf
src/amr_gazebo/: CMakeLists.txt  package.xml
src/amr_gazebo/config/: detection.ros.conf
src/amr_gazebo/launch/: .solamr_linked_shelfx.launch.swp  .solamr_skid_shelfx.launch.swp  follower_costmap.launch  linked_drive_error_test.launch  nav_core.launch  nav_core_mapping.launch  shelfS_recognition.launch  solamr_linked_2in1.launch  solamr_linked_shelfx.launch  solamr_only.launch  solamr_only_one.launch  solamr_shelfS.launch  solamr_single.launch  solamr_skid_shelfx.launch  test.launch
src/amr_gazebo/maps/: frames.gv  maze_s.pgm  maze_s.yaml
src/amr_gazebo/rviz/: follower_costmap.rviz  move_base_dwa.rviz  one.rviz  single_solamr.rviz
src/amr_gazebo/scripts/: .auto_connector.py.swp  .position_follower.py.swp  .test_pub.py.swp  aruco_publisher.py  auto_connector.py  imu2theta_pub.py  lidar_detect.py  myqt.py  (+8 more)
(+66 files in other folders)
