<package format="2">
  <name>amr_description</name>
  <version>0.0.1</version>
  <description>
  Provides a URDF for SOLab's Automated Mobile Robot
  </description>
  <maintainer email="liuyc@solab.me.ntu.edu.tw">liuyc</maintainer>
  <license>APACHE 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
</package>
