<?xml version="1.0"?>
<package format="2">
  <name>amr_gazebo</name>
  <version>0.0.0</version>
  <description>
  Prius description for intersection simulation of POS
  </description>
  <maintainer email="liuyc@solab.me.ntu.edu.tw">LiuYC</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <depend>joy</depend>
  <depend>AMR_description</depend>
  <depend>robot_state_publisher</depend>
  <depend>rospy</depend>
  <depend>rviz</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models"/>
  </export>
</package>
